[gd_scene load_steps=3 format=3 uid="uid://chk1pf7m4d7cd"]

[ext_resource type="Script" uid="uid://b5xx6s4s3cad8" path="res://ui/reward_config_ui.gd" id="1_a6iy0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dumxo"]
bg_color = Color(1, 1, 1, 0.0666667)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="RewardConfigUi" type="MarginContainer" node_paths=PackedStringArray("remove_button", "amount_edit", "option_button")]
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_a6iy0")
remove_button = NodePath("Panel/MarginContainer/HBoxContainer/RemoveButton")
amount_edit = NodePath("Panel/MarginContainer/HBoxContainer/LineEdit")
option_button = NodePath("Panel/MarginContainer/HBoxContainer/OptionButton")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dumxo")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Ada"
popup/item_0/id = 0

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "0"
placeholder_text = "amount"

[node name="Space" type="Control" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RemoveButton" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Remove"

[connection signal="item_selected" from="Panel/MarginContainer/HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="text_changed" from="Panel/MarginContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/RemoveButton" to="." method="_on_remove_button_pressed"]
